<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.FormLogin">

    <View
        android:id="@+id/containerTop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_ssapp"
        app:layout_constraintTop_toTopOf="@id/containerTop"
        app:layout_constraintStart_toStartOf="@id/containerTop"
        app:layout_constraintEnd_toEndOf="@id/containerTop"
        app:layout_constraintBottom_toBottomOf="@id/containerTop"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/containerTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/dark_cyan_red"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            android:drawableEnd="@drawable/ic_mail" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/dark_cyan_red"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btEsqueceuSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_esqueceu_senha"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutSenha"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_entrar"
        app:layout_constraintTop_toBottomOf="@+id/btEsqueceuSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="15dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_criar_conta"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/btEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_versao"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btCriarConta"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txtVersao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


