<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.perfil.FormMeuPerfil">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <ImageView
                    android:id="@+id/bt_voltar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_voltar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar"
                    app:layout_constraintStart_toStartOf="@+id/toolbar"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="210dp"
                    android:text="@string/title_activity_meu_perfil"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"
                    app:layout_constraintEnd_toEndOf="@id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar"
                    app:layout_constraintStart_toEndOf="@+id/bt_voltar"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintTextColor="@color/black"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome_completo"
                android:inputType="text"
                android:maxLines="1"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutNomeCompleto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtInputLayoutSenha"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintTextColor="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtInputLayoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:hintTextColor="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:inputType="text"
                android:maxLines="1"
                android:padding="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_AlterarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_sair_da_minha_conta"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoutSenha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:textColor="@color/black"

            android:textSize="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_deslogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_sair_da_minha_conta"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/bt_AlterarSenha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:textColor="@color/black"

            android:textSize="15dp"
            />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/bt_deslogar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
