<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.dados.FormDadosPrincipal">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/bt_voltar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_voltar"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"
                    app:layout_constraintStart_toStartOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />

                <TextView
                    android:id="@+id/nomeSegmento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="210dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/toolbar"
                    app:layout_constraintEnd_toEndOf="@id/toolbar"
                    app:layout_constraintStart_toEndOf="@+id/bt_voltar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tituloSegmento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descricaosegmento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="18sp" />
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btnAdicionar"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/black"
                    android:text="@string/adiciionar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"/>

                <Button
                    android:id="@+id/btnHistorico"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:text="@string/hist_rico"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/txtConteudoRelacionado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/conte_do_relacionado"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/banner_fake"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/funcionalidade_em_desenvolvimento"
                      />

            </LinearLayout>



        </com.google.android.material.appbar.AppBarLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
